# GetHistData_Lib

./: Cargo.toml  README.md  instrument-list.json
src/: GetHistData.rs  Test.rs  lib.rs
src/GetHistData/: DukasCopy.rs  Service.rs
src/GetHistData/DukasCopy/: Buffer_Fetcher.rs  DataTypes.rs  GetWebData.rs  Get_HistoricRates.rs  Option.rs  Process.rs  TrueDataTypes.rs  dates_normaliser.rs  generate.rs  url_generator.rs
src/GetHistData/DukasCopy/GetWebData/: generate_data_types.rs
src/GetHistData/DukasCopy/Process/: ProcessData.rs
src/GetHistData/Service/: FileService.rs  Util.rs
src/GetHistData/Service/Util/: date.rs  range.rs
