[package]
name = "GetHistData_Lib"
version = "0.1.0"
authors = ["加藤原語 <31905238+XRayZen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono={version="0.4",features=["serde"]}
reqwest={version="0.11" ,features = ["blocking","json"]}
Standard_Lib={git="https://github.com/XRayZen/Standard_Lib"}
tokio={version="1",features=["full"]}
serde={version="1.0",features=["derive"]}
serde_json="1.0"
regex="1"